force-app/main/default/objects/PricebookEntry/fields/Approval_Level_to_Enforce__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_to_Enforce__c</fullName>
    <label>Approval Level to Enforce</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Least Restrictive</fullName>
                <default>true</default>
                <label>Least Restrictive</label>
            </value>
            <value>
                <fullName>Most Restrictive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>