force-app/main/default/objects/PricebookEntry/fields/Auto_Add__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Add</label>
    <type>Checkbox</type>
</CustomField>