force-app/main/default/objects/PricebookEntry/fields/Auto_Add_Free_Month_Setting__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Free_Month_Setting__c</fullName>
    <label>Auto-Add Free Month Setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extend Contract - At the Beginning</fullName>
            </value>
            <value>
                <fullName>Include in Contract Period - At the Beginning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>