force-app/main/default/objects/PricebookEntry/fields/Auto_Add_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Free_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Auto-Add Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>