force-app/main/default/objects/PricebookEntry/fields/Auto_Add_Promotional_Price__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Promotional_Price__c</fullName>
    <label>Auto-Add Promotional Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>