force-app/main/default/objects/PricebookEntry/fields/Auto_Add_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Auto-Add Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>