force-app/main/default/objects/PricebookEntry/fields/Auto_Add_Trial__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Trial__c</fullName>
    <label>Auto-Add Trial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>