force-app/main/default/objects/PricebookEntry/fields/Enforce_Limits_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Limits_Price_Discount__c</fullName>
    <label>Enforce Limits - Price Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Limits</valueSetName>
    </valueSet>
</CustomField>