force-app/main/default/objects/PricebookEntry/fields/Free_Months_Floor__c.field-meta.xml
<CustomField>
    <fullName>Free_Months_Floor__c</fullName>
    <label>Free Months Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>