force-app/main/default/objects/PricebookEntry/fields/Level_0_Limit_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Level_0_Limit_Free_Months__c</fullName>
    <label>Level 0 Limit - Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>