force-app/main/default/objects/PricebookEntry/fields/Level_1_Limit_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Limit_Price_Discount__c</fullName>
    <label>Level 1 Limit - Price Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>