force-app/main/default/objects/PricebookEntry/fields/Level_1_Limit_Trial__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Limit_Trial__c</fullName>
    <label>Level 1 Limit - Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>