force-app/main/default/objects/PricebookEntry/fields/Level_2_Limit_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Limit_Price_Discount__c</fullName>
    <label>Level 2 Limit - Price Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>