force-app/main/default/objects/PricebookEntry/fields/Price_Discount_Floor__c.field-meta.xml
<CustomField>
    <fullName>Price_Discount_Floor__c</fullName>
    <label>Price Discount Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>