force-app/main/default/objects/PricebookEntry/fields/Trial_Period_Floor__c.field-meta.xml
<CustomField>
    <fullName>Trial_Period_Floor__c</fullName>
    <label>Trial Period Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>